--- a/Phonons.ipynb
+++ b/Phonons.ipynb
@@ -25,8 +25,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['ASE_ESPRESSO_COMMAND'] = \"mpirun -np 4 /Users/olivieroandreussi/PWSCF/qe-git/bin/pw.x -in PREFIX.pwi > PREFIX.pwo\"\n",
+    "os.environ['ASE_ESPRESSO_COMMAND'] = \"mpirun -np 4 /Users/oliviero/PWSCF/espresso-git/bin/pw.x -in PREFIX.pwi > PREFIX.pwo\"\n",
     "os.environ['OMP_NUM_THREADS'] = \"1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pseudodir = '/Users/oliviero/PWSCF/espresso-git/pseudo'"
    ]
   },
   {
@@ -83,7 +92,7 @@
     "input_data = {\n",
     "    'control': {\n",
     "        'restart_mode': 'from_scratch',\n",
-    "        'pseudo_dir': '/Users/olivieroandreussi/PWSCF/qe-7.2/pseudo',\n",
+    "        'pseudo_dir': '/Users/oliviero/PWSCF/espresso-git/pseudo',\n",
     "        'calculation': 'relax',\n",
     "        'prefix': 'H2O_vacuum'\n",
     "    },\n",
@@ -182,7 +191,7 @@
     "input_data = {\n",
     "    'control': {\n",
     "        'restart_mode': 'from_scratch',\n",
-    "        'pseudo_dir': '/Users/olivieroandreussi/PWSCF/qe-7.2/pseudo',\n",
+    "        'pseudo_dir': pseudodir,\n",
     "        'calculation': 'scf',\n",
     "        'prefix': 'H2O_vacuum'\n",
     "    },\n",
@@ -223,7 +232,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atoms.positions"
+    "np.sqrt(np.sum((atoms.positions[0,:]-atoms.positions[1,:])**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(np.sum((relaxed_atoms.positions[0,:]-relaxed_atoms.positions[1,:])**2))"
    ]
   },
   {
@@ -259,7 +277,122 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ph.read(acoustic=True)\n",
+    "ph.clean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ph.C_N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "path = atoms.cell.bandpath('GX', npoints=100)\n",
+    "bs = ph.get_band_structure(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dos = ph.get_dos(kpts=(20, 20, 20)).sample_grid(npts=100, width=1e-3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Plot the band structure and DOS:\n",
+    "import matplotlib.pyplot as plt  # noqa\n",
+    "\n",
+    "fig = plt.figure(1, figsize=(7, 4))\n",
+    "ax = fig.add_axes([.12, .07, .67, .85])\n",
+    "\n",
+    "emax = 0.035\n",
+    "bs.plot(ax=ax, emin=0.0, emax=emax)\n",
+    "\n",
+    "dosax = fig.add_axes([.8, .07, .17, .85])\n",
+    "dosax.fill_between(dos.get_weights(), dos.get_energies(), y2=0, color='grey',\n",
+    "                   edgecolor='k', lw=1)\n",
+    "\n",
+    "dosax.set_ylim(0, emax)\n",
+    "dosax.set_yticks([])\n",
+    "dosax.set_xticks([])\n",
+    "dosax.set_xlabel(\"DOS\", fontsize=18)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dos.get_energies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ase.build import molecule\n",
+    "from ase.calculators.emt import EMT\n",
+    "from ase.optimize import BFGS\n",
+    "from ase.vibrations import Vibrations\n",
+    "\n",
+    "h2o = molecule('H2O')\n",
+    "h2o.calc = EMT()\n",
+    "BFGS(h2o).run(fmax=0.01)\n",
+    "\n",
+    "vib = Vibrations(h2o)\n",
+    "vib.run()\n",
+    "vib.summary(log='H2O_EMT_summary.txt')\n",
+    "vib.write_mode(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vib.show_as_force(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vib.write_mode(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trajectory = read('vib.8.traj')"
+   ]
   }
  ],
  "metadata": {
@@ -277,8 +410,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
