Commented working version

--- a/Phonons.ipynb
+++ b/Phonons.ipynb
@@ -1,22 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Relax, Vibrations, and Phonons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import useful modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "#\n",
-    "# ASE is a very convenient module for setting up simulations on molecules and \n",
-    "# bulk materials\n",
-    "#\n",
-    "from ase.io import read, write\n",
-    "from ase.build import molecule\n",
+    "from ase.io import read\n",
+    "from ase.build import molecule, bulk\n",
     "from ase.visualize import view\n",
-    "from ase.calculators.espresso import Espresso"
+    "from ase.calculators.espresso import Espresso, EspressoProfile\n",
+    "from ase.calculators.emt import EMT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Legacy setup of ASE environment variable for running Quantum Espresso. NOTE: the qepath needs to be changed to the installation folder of QE."
    ]
   },
   {
@@ -25,8 +43,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['ASE_ESPRESSO_COMMAND'] = \"mpirun -np 4 /Users/oliviero/PWSCF/espresso-git/bin/pw.x -in PREFIX.pwi > PREFIX.pwo\"\n",
-    "os.environ['OMP_NUM_THREADS'] = \"1\""
+    "#import os\n",
+    "# runcommand = \"mpirun -np 4\"\n",
+    "# qepath = \"/Users/oliviero/PWSCF/espresso-git/bin/\"\n",
+    "#os.environ['ASE_ESPRESSO_COMMAND'] = runcommand+qepath+\"pw.x -in PREFIX.pwi > PREFIX.pwo\"\n",
+    "#os.environ['OMP_NUM_THREADS'] = \"1\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following should be the most uptodate approach to setup the QE calculator variables."
    ]
   },
   {
@@ -35,7 +63,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pseudodir = '/Users/oliviero/PWSCF/espresso-git/pseudo'"
+    "# Optionally create profile to override paths in ASE configuration:\n",
+    "profile = EspressoProfile(\n",
+    "    command='mpirun -np 4 /Users/oliviero/PWSCF/espresso-git/bin/pw.x', pseudo_dir='./pseudos/'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unit conversion factors"
    ]
   },
   {
@@ -51,6 +89,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Geometry Optimization of a Water Molecule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the `molecule` function of ASE to generate a water molecule"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -58,6 +110,13 @@
    "source": [
     "atoms = molecule('H2O')\n",
     "view(atoms, viewer=\"x3d\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to simulate the molecule with QE, we need to setup the simulation cell. In this case, a cubic box of side 15 Angstrom and periodic boundary conditions. "
    ]
   },
   {
@@ -72,6 +131,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setup pseudopotentials information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -81,6 +147,13 @@
     "    \"H\":\"H.pbe-rrkjus.UPF\",\n",
     "    \"O\":\"O.pbe-rrkjus.UPF\"\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setup of QE input parameters and calculator"
    ]
   },
   {
@@ -101,20 +174,28 @@
     "        'ecutrho': 300\n",
     "    },\n",
     "    'electrons': {\n",
-    "        'diagonalization':'david',\n",
     "        'conv_thr': 1.0e-8, \n",
-    "        'mixing_beta': 0.4\n",
+    "        'mixing_beta': 0.7\n",
     "    }\n",
     "} \n",
     "\n",
     "calc = Espresso(\n",
+    "    profile=profile,\n",
     "    pseudopotentials=pseudopotentials,\n",
     "    tstress=True, tprnfor=True, \n",
     "    input_data = input_data,\n",
     "    kpts=(1,1,1),\n",
     "    koffset=(0,0,0))\n",
     "\n",
-    "atoms.calc = calc"
+    "atoms.calc = calc\n",
+    "# atoms.calc = EMT()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `get_potential_energy()` methods of the `Atoms` object will call the calculator and perform the DFT simulation. "
    ]
   },
   {
@@ -125,6 +206,13 @@
    "source": [
     "energy = atoms.get_potential_energy()\n",
     "print(f\"Energy in vacuum = {energy:.3f} eV\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now use ASE to read the output file and use the relaxed structure."
    ]
   },
   {
@@ -142,16 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atoms.positions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "relaxed_atoms.positions"
+    "print(atoms.positions)\n",
+    "print(relaxed_atoms.positions)"
    ]
   },
   {
@@ -162,12 +242,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the pw.x tool of QE mostly relies on BFGS for geometry relaxation. In ASE there is a separate implementation of the BFGS algorithm, as well as other optimization tools. We can thus submit QE calculations that only perform the SCF, and use ASE to control the geometry relaxation. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ase.optimize import BFGS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Re-perform the setup of the previous system"
    ]
   },
   {
@@ -191,7 +285,7 @@
     "input_data = {\n",
     "    'control': {\n",
     "        'restart_mode': 'from_scratch',\n",
-    "        'pseudo_dir': pseudodir,\n",
+    "        'pseudo_dir': './pseudos/',\n",
     "        'calculation': 'scf',\n",
     "        'prefix': 'H2O_vacuum'\n",
     "    },\n",
@@ -207,13 +301,15 @@
     "} \n",
     "\n",
     "calc = Espresso(\n",
+    "    profile=profile,\n",
     "    pseudopotentials=pseudopotentials,\n",
     "    tstress=True, tprnfor=True, \n",
     "    input_data = input_data,\n",
     "    kpts=(1,1,1),\n",
     "    koffset=(0,0,0))\n",
     "\n",
-    "atoms.calc = calc"
+    "atoms.calc = calc\n",
+    "#atoms.calc = EMT()"
    ]
   },
   {
@@ -248,7 +344,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use ASE for Phonons Calculations"
+    "## Vibrations with ASE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have a relaxed structure, we can use finite differences to compute the Hessian matrix and diagonalize it to obtain the vibrational frequencies and vibrational modes of the atomistic system. In the following example, we will use the EMT calculator instead of QE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ase.vibrations import Vibrations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atoms.calc = EMT()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The summary contains information on the vibrational modes and the zero point energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vib = Vibrations(atoms)\n",
+    "vib.run()\n",
+    "vib.summary(log='H2O_vib_summary.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use ASE for Phonons Calculations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have a relaxed structure, we can use finite differences to compute the Hessian matrix and diagonalize it to obtain the vibrational frequencies and vibrational modes of the atomistic system. In the following example, we will use the EMT calculator instead of QE"
    ]
   },
   {
@@ -266,10 +419,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Setup crystal and EMT calculator\n",
+    "atoms = bulk('Al', 'fcc', a=4.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Phonon calculator\n",
-    "N = 1\n",
-    "ph = Phonons(atoms, calc, supercell=(N, N, N), delta=0.05)\n",
-    "ph.run()\n"
+    "N = 7\n",
+    "ph = Phonons(atoms, EMT(), supercell=(N, N, N), delta=0.05)\n",
+    "ph.run()"
    ]
   },
   {
@@ -297,8 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "path = atoms.cell.bandpath('GX', npoints=100)\n",
+    "path = atoms.cell.bandpath('GXULGK', npoints=100)\n",
     "bs = ph.get_band_structure(path)"
    ]
   },
@@ -317,7 +479,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Plot the band structure and DOS:\n",
     "import matplotlib.pyplot as plt  # noqa\n",
     "\n",
@@ -352,46 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ase.build import molecule\n",
-    "from ase.calculators.emt import EMT\n",
-    "from ase.optimize import BFGS\n",
-    "from ase.vibrations import Vibrations\n",
-    "\n",
-    "h2o = molecule('H2O')\n",
-    "h2o.calc = EMT()\n",
-    "BFGS(h2o).run(fmax=0.01)\n",
-    "\n",
-    "vib = Vibrations(h2o)\n",
-    "vib.run()\n",
-    "vib.summary(log='H2O_EMT_summary.txt')\n",
-    "vib.write_mode(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "vib.show_as_force(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vib.write_mode(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trajectory = read('vib.8.traj')"
    ]
   }
  ],
