Clean running command

--- a/Phonons.ipynb
+++ b/Phonons.ipynb
@@ -31,6 +31,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runprefix = \"mpirun -np 4 \"\n",
+    "qepath = \"/Users/oliviero/PWSCF/espresso-git/bin/\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,9 +54,7 @@
    "outputs": [],
    "source": [
     "#import os\n",
-    "# runcommand = \"mpirun -np 4\"\n",
-    "# qepath = \"/Users/oliviero/PWSCF/espresso-git/bin/\"\n",
-    "#os.environ['ASE_ESPRESSO_COMMAND'] = runcommand+qepath+\"pw.x -in PREFIX.pwi > PREFIX.pwo\"\n",
+    "#os.environ['ASE_ESPRESSO_COMMAND'] = runprefix+qepath+\"pw.x -in PREFIX.pwi > PREFIX.pwo\"\n",
     "#os.environ['OMP_NUM_THREADS'] = \"1\""
    ]
   },
@@ -65,7 +73,7 @@
    "source": [
     "# Optionally create profile to override paths in ASE configuration:\n",
     "profile = EspressoProfile(\n",
-    "    command='mpirun -np 4 /Users/oliviero/PWSCF/espresso-git/bin/pw.x', pseudo_dir='./pseudos/'\n",
+    "    command=runprefix+qepath+'pw.x', pseudo_dir='./pseudos/'\n",
     ")"
    ]
   },
