Add pseudodir variable

--- a/Phonons.ipynb
+++ b/Phonons.ipynb
@@ -37,7 +37,8 @@
    "outputs": [],
    "source": [
     "runprefix = \"mpirun -np 4 \"\n",
-    "qepath = \"/Users/oliviero/PWSCF/espresso-git/bin/\""
+    "qepath = \"/Users/oliviero/PWSCF/espresso-git/bin/\"\n",
+    "pseudodir = \"./pseudos\""
    ]
   },
   {
@@ -73,7 +74,7 @@
    "source": [
     "# Optionally create profile to override paths in ASE configuration:\n",
     "profile = EspressoProfile(\n",
-    "    command=runprefix+qepath+'pw.x', pseudo_dir='./pseudos/'\n",
+    "    command=runprefix+qepath+'pw.x', pseudo_dir=pseudodir\n",
     ")"
    ]
   },
