Add system setting for bridges2

--- a/Phonons.ipynb
+++ b/Phonons.ipynb
@@ -20,10 +20,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "#\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "#\n",
-    "from ase.io import read\n",
+    "from ase.io import read, write\n",
     "from ase.build import molecule, bulk\n",
     "from ase.visualize import view\n",
     "from ase.calculators.espresso import Espresso, EspressoProfile\n",
@@ -36,9 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%set_env LD_LIBRARY_PATH=\"/opt/packages/oneapi/v2023.2.0/mkl/2023.2.0/lib/intel64:/opt/packages/oneapi/v2023.2.0/compiler/2023.2.1/linux/lib:/opt/packages/oneapi/v2023.2.0/compiler/2023.2.1/linux/lib/x64:/opt/packages/oneapi/v2023.2.0/compiler/2023.2.1/linux/compiler/lib/intel64_lin:/opt/packages/oneapi/v2023.2.0/tbb/2021.10.0/lib/intel64/gcc4.8:/opt/packages/oneapi/v2023.2.0/mpi/2021.10.0/libfabric/lib:/opt/packages/oneapi/v2023.2.0/mpi/2021.10.0/lib/release:/opt/packages/oneapi/v2023.2.0/mpi/2021.10.0/lib\"\n",
+    "%set_env PATH=\"/opt/packages/oneapi/v2023.2.0/mpi/2021.10.0/libfabric/bin:/opt/packages/oneapi/v2023.2.0/mpi/2021.10.0/bin:/opt/packages/psc.allocations.user/bin:/opt/packages/allocations/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/packages/interact/bin:/opt/puppetlabs/bin:/ocean/projects/che240027p/shared/software/Team_BSU_Soft/q-e/bin\"\n",
     "runprefix = \"mpirun -np 4 \"\n",
-    "qepath = \"/Users/oliviero/PWSCF/espresso-git/bin/\"\n",
-    "pseudodir = \"./pseudos\""
+    "qepath = \"\"\n",
+    "pseudodir = f\"{os.environ['HOME']}/Phonons-Tutorials/pseudos\"\n",
+    "SSSP_efficiency_pseudo_dir = \"/ocean/projects/che240027p/shared/software/Team_BSU_Soft/pseudo/SSSP_1.3.0_efficiency\"\n",
+    "SSSP_precision_pseudo_dir = \"/ocean/projects/che240027p/shared/software/Team_BSU_Soft/pseudo/SSSP_1.3.0_precision\""
    ]
   },
   {
@@ -174,7 +180,7 @@
     "input_data = {\n",
     "    'control': {\n",
     "        'restart_mode': 'from_scratch',\n",
-    "        'pseudo_dir': '/Users/oliviero/PWSCF/espresso-git/pseudo',\n",
+    "        'pseudo_dir': f\"{os.environ['HOME']}/Phonons-Tutorials/pseudos\",\n",
     "        'calculation': 'relax',\n",
     "        'prefix': 'H2O_vacuum'\n",
     "    },\n",
@@ -191,10 +197,12 @@
     "calc = Espresso(\n",
     "    profile=profile,\n",
     "    pseudopotentials=pseudopotentials,\n",
-    "    tstress=True, tprnfor=True, \n",
+    "    tstress=True, \n",
+    "    tprnfor=True, \n",
     "    input_data = input_data,\n",
     "    kpts=(1,1,1),\n",
-    "    koffset=(0,0,0))\n",
+    "    koffset=(0,0,0)\n",
+    ")\n",
     "\n",
     "atoms.calc = calc\n",
     "# atoms.calc = EMT()"
@@ -215,6 +223,15 @@
    "source": [
     "energy = atoms.get_potential_energy()\n",
     "print(f\"Energy in vacuum = {energy:.3f} eV\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls"
    ]
   },
   {
